<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent"

    tools:context="com.example.pop.easylearning.StudentLog"

    android:background="#F6F8FA"


    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FAFAFA"
        android:layout_centerVertical="true"
        >
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:hint="@string/name_hintstring"
        android:textColor="#21ABCD"
        android:textColorHint="#21ABCD"
        android:layout_marginLeft="5dp"
        android:textSize="10dp"
        android:background="#EEF1F3"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:id="@+id/name"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:hint="@string/email_hintString"
        android:textColor="#21ABCD"
        android:textColorHint="#21ABCD"
        android:layout_marginLeft="5dp"
        android:textSize="10dp"
        android:background="#EEF1F3"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/email"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:hint="@string/streaming_hintString"
        android:textColor="#21ABCD"
        android:textColorHint="#21ABCD"
        android:layout_marginLeft="5dp"
        android:textSize="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="#EEF1F3"
        android:id="@+id/url"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:typeface="serif"
        android:text="@string/log_btn_string"
        android:id="@+id/logbtn"
        android:background="@drawable/logbtn"
        android:textColor= "#21ABCD"
         android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp" />
    </LinearLayout>

</RelativeLayout>
