
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/surface_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@android:color/black" >

    <net.majorkernelpanic.streaming.gl.SurfaceView
        android:id="@+id/surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" >

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/start"
                android:src="@drawable/ic_switch_video"
                android:text="@string/start" />

            <ImageButton
                android:id="@+id/stop"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/stop"
                android:src="@drawable/ic_switch_video_active" />

            <ImageButton
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/camera"
                android:src="@drawable/ic_switch_photo_facing_holo_light" />


        </LinearLayout>
    </FrameLayout>

</FrameLayout>