<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.pop.easylearning.OC"
    android:orientation="vertical"
    android:background="#F1F4F7"
android:gravity="center"

    >




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="105dp"
        android:orientation="horizontal"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="@drawable/studentapp"
            android:src="@drawable/attendance"

            android:layout_weight="1"

            android:id="@+id/Attendance"  />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="@drawable/studentapp"
            android:src="@drawable/survey"
            android:layout_weight="1"
            android:layout_marginLeft="150dp"
            android:id="@+id/trafficLight"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/attendancetext_String"
            android:textColor="#3F51B5"  />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Traffictext_string"
            android:layout_marginLeft="120dp"
            android:textColor="#3F51B5"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="105dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="@drawable/studentapp"
            android:src="@drawable/white_board"

            android:layout_weight="1"
            android:id="@+id/WhiteSheet"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="@drawable/studentapp"
            android:src="@drawable/lecht"
            android:id="@+id/lec"
            android:layout_weight="1"
            android:layout_marginLeft="150dp"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/WhiteSheettext_string"
            android:textColor="#3F51B5"   />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_weight="1"
            android:text="@string/lecture_String"
            android:textColor="#3F51B5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="105dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="@drawable/studentapp"
            android:src="@drawable/questions"

            android:layout_weight="1"
            android:id="@+id/ques"  />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="@drawable/studentapp"
            android:src="@drawable/slides"

            android:layout_weight="1"
            android:layout_marginLeft="150dp"
            android:id="@+id/slide"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stuQuestios_String"
            android:textColor="#3F51B5"   />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Slides_String"
            android:layout_marginLeft="106dp"
            android:textColor="#3F51B5"    />

    </LinearLayout>


    </LinearLayout>
